# lenet-5

./: .gitignore  CMakeLists.txt  DigitDetect.py  README.md  __init__.py  activate.py  camera.py  cnn.py  cost.py  getImg.py  ip.py  main.py  mlp.py  nc.py  network.py  rgb_rainbow.py  setupCVEnv.sh  sh.py  sources.list  sp.py  train_cnn.py  web.py
cnn_model/: 07d0b814-a9b1-11eb-933d-9eb6d071e4f3.pkl  5007ed52-a9b4-11eb-8708-9eb6d071e4f3.pkl  54fb7ed8-aeea-11eb-95b8-9cb6d071e4f4.pkl  85a4dd10-a9b4-11eb-974f-9eb6d071e4f3.pkl  bec9b5a1-a9b3-11eb-94d2-9eb6d071e4f3.pkl  cd3aa59e-a9ab-11eb-a4bf-9eb6d071e4f3.pkl
cv/: __init__.py  config.py  ip.py  recognition.py  rgb_rainbow.py  test_camera.py
include/: cnn.h
mlp_model/: 5a1f17f6-a014-11eb-8469-9cb6d071e4f4.json  5ae60146-a036-11eb-a165-9cb6d071e4f4.json  8da4eda7-a043-11eb-85fd-9cb6d071e4f4.json  aab4e6da-a033-11eb-9995-9cb6d071e4f4.json  ba03c2bd-a1c4-11eb-82fd-9cb6d071e4f4.json  d63376f7-a1d0-11eb-85ab-9cb6d071e4f4.json  eac8abc8-a1cb-11eb-be2b-9cb6d071e4f4.json  f0e46888-a02f-11eb-b282-9cb6d071e4f4.json  model_info.json
model/: hyperparameters_cnn.json  hyperparameters_mlp.json  index
model/cnn/0f58511b-c854-11eb-988a-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/1458ecb8-c6bf-11eb-aed4-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/18fac6b0-c5ed-11eb-b237-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/1c6b5417-c6af-11eb-9d24-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/1e78c34a-c9b8-11eb-8fb0-acde48001122/: info.json  monitor.pkl
model/cnn/1eae1a27-c61b-11eb-86aa-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/2231314b-c615-11eb-b261-9cb6d071e4f4/: info.json  monitor.pkl
model/cnn/2c96605e-c689-11eb-9a31-9cb6d071e4f4/: info.json  monitor.pkl
nn/: __init__.py  activate.py  cnn.py  cost.py  expand_rotation.py  genimg.py  mlp.py  mnist_loader.py  monite.py  pool.py  show_cnn.py  show_mlp.py  train_cnn.py  train_mlp.py
nn_model/: 0eebda4d-a00b-11eb-bb0c-9cb6d071e4f4.json  27107fe6-a01d-11eb-a8ab-9cb6d071e4f4.json  4c4bf27c-a016-11eb-8820-9cb6d071e4f4.json  9b6ec692-a027-11eb-9d29-9cb6d071e4f4.json  model_acc9769.json  model_acc9779.json  model_acc9785.json  model_info.json
src/: cnn.cpp  cv2test.cpp  eigentest.cpp  train.cpp
templates/: index.html
(+62 files in other folders)
